testing/errors/macroparamtwice1.a
	!macro dummy ~@x, ~@x {
	}
	+dummy ~y, ~z	; -> "Macro parameter twice."
